--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
         <a class="gast" href="gasten.html"><button class="btn btn-primary">Gast Registreren</button></a>
-        <a class="login" href="#"><button class="btn btn-success">Admin login</button></a>
+        <a class="login" href="login.html"><button class="btn btn-success">Admin login</button></a>
 
         <h1>ROC Rivor</h1><br>
 <div class="container">
