--- a/index.html
+++ b/index.html
@@ -6,89 +6,14 @@
     <body>
 
 
-        <a class="gast" href="gasten.html"><button class="btn btn-primary">Gast Registreren</button></a>
-        <a class="login" href="login.html"><button class="btn btn-success">Admin login</button></a>
+
 
         <h1>ROC Rivor</h1><br>
-<div class="container">
-    <div class="row">
-        <div class="card col-lg-4">
-            <div class="card">
-                <img src="https://www.rocrivor.nl/media/images/ROC_Diploma_Route-1.c202dd06.fill-360x240.jpegquality-80.jpg" class="card-img-top">
-                <div class="card-body">
-                <h5 class="card-title">Bachstraat, Tiel (hoofdlocatie)</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check aanwezigen</a>
-                </div>
-            </div>
-        </div>
-        <div class="card col-lg-4">
-            <div class="card">
-                <img src="https://www.rocrivor.nl/media/images/ROC_Diploma_Route-1.963ce4db.fill-360x240.jpegquality-80.jpg" class="card-img-top">
-                <div class="card-body">
-                <h5 class="card-title">Beethovenstraat, Tiel</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check aanwezigen</a>
-                </div>
-            </div>
-        </div>
-        <div class="card col-lg-4">
-            <div class="card">
-                <img src="https://www.rocrivor.nl/media/images/pand_atotechniek_2.818667c1.fill-360x240.jpegquality-80.jpg" class="card-img-top">
-                <div class="card-body">
-                <h5 class="card-title">Franklinstraat, Tiel</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check aanwezigen</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card col-lg-4">
-            <div class="card">
-                <img src="https://www.rocrivor.nl/media/images/IMG_0073-berwerkt.60a470d9.fill-360x240.jpegquality-80.jpg" class="card-img-top">
-                <div class="card-body">
-                <h5 class="card-title">Gijsbert Stoutweg, Tiel</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check aanwezigen</a>
-                </div>
-            </div>
-        </div>
-        <div class="card col-lg-4">
-            <div class="card">
-                <img src="https://www.rocrivor.nl/media/images/Rivor_dg_5_-196.8a0bc8ef.fill-360x240.jpegquality-80.jpg" class="card-img-top">
-                <div class="card-body">
-                <h5 class="card-title">Voor de Kijkuit, Tiel</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check aanwezigen</a>
-                </div>
-            </div>
-        </div>
-        <div class="card col-lg-4">
-            <div class="card">
-                <img src="https://www.rocrivor.nl/media/images/ROC_Diploma_Route-3.fc46807b.fill-360x240.jpegquality-80.jpg" class="card-img-top">
-                <div class="card-body">
-                <h5 class="card-title">Oudenhof, Geldermalsen</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check aanwezigen</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card col-lg-4">
-            <div class="card">
-                <img src="https://www.rocrivor.nl/media/images/ROC_Dag_6_2.2e16d0ba.fill-360x240.jpegquality-80.jpg" class="card-img-top">
-                <div class="card-body">
-                <h5 class="card-title">Poppenbouwing, Geldermalsen</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check aanwezigen</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
+        <div class="text-center">
+            <a class="gast" href="gasten.html"><button style="height: 500px; width: 500px; font-size: 50px;" class="btn btn-primary col-lg-4">Gast Registreren</button></a>
+            <a class="login" href="login.html"><button style="height: 500px; width: 500px; font-size: 50px;" class="btn btn-success col-lg-4">Admin login</button></a>
+        </div>
 
 
 
