--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="text-center">
             <a class="gast" href="gasten.html"><button style="height: 500px; width: 500px; font-size: 50px;" class="btn btn-primary col-lg-4">Gast Registreren</button></a>
-            <a class="login" href="login.html"><button style="height: 500px; width: 500px; font-size: 50px;" class="btn btn-success col-lg-4">Admin login</button></a>
+            <a class="login" href="login.php"><button style="height: 500px; width: 500px; font-size: 50px;" class="btn btn-success col-lg-4">Admin login</button></a>
         </div>
 
 
